<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemSort"
        android:title="@string/sort"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/itemName"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/itemDateModified"
                android:title="@string/sort_by_date_modified" />

            <item
                android:id="@+id/itemDateAdded"
                android:title="@string/sort_by_date_added" />

            <item android:id="@+id/order"
                android:title="@string/order"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/ascending"
                        android:title="@string/ascending_order"/>
                    <item
                        android:id="@+id/descending"
                        android:title="@string/descending_order"/>


                </menu>
            </item>

        </menu>

    </item>


</menu>